--- a/style.css
+++ b/style.css
@@ -38,13 +38,25 @@ h1 {
   font-size: 3rem;
 }
 
-/* todo-form */
+/* task-new */
 
-.todo-form {
+.task-new-popup {
+  position: absolute;
+  text-align: center;
+  display: block;
+  top: 20%;
+  align-items: center;
+  padding: 20px;
+  background: #dbdbdb;
+  border-radius: 5px;
+  border: 1px solid #bbb;
+}
+
+.task-new {
   margin: 40px 0px;
 }
 
-.todo-input {
+.task-new input {
   width: 250px;
   border: none;
   outline: none;
@@ -64,31 +76,31 @@ h1 {
   font-size: 1.2rem;
 }
 
-/* todo-form style ends */
+/* task-new style ends */
 
-/* todo-items */
-.todo-items {
+/* task-list */
+.task-list {
   min-width: 350px;
 }
 
-/* each li with class="item" */
-.item {
+/* each li with class="task" */
+.task {
   background-color: #fff;
   padding: 10px;
   font-size: 1.1rem;
 }
 
-.item:first-child {
+.task:first-child {
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
 }
 
-.item:last-child {
+.task:last-child {
   border-bottom-left-radius: 7px;
   border-bottom-right-radius: 7px;
 }
 
-/* item style end */
+/* task style end */
 
 .checkbox {
   margin-right: 10px;
@@ -106,11 +118,11 @@ h1 {
   font-weight: 550;
 }
 
-/* applied when the todo item is checked */
+/* applied when the task item is checked */
 .checked { 
   text-decoration: line-through;
 }
 
-/* todo-items style ends */
+/* task-list style ends */
 
 /* container style ends */
