--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   display: flex;
   justify-content: center;
   background: linear-gradient(170deg, #F00000, #bd006e);
-  font-family: sans-serif;
+  font-family: system-ui, sans-serif;
 }
 
 ul {
@@ -97,7 +97,6 @@ ul {
 /************************** container **************************/
 .container {
   min-width: 700px;
-  display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
