fix: adjust calendar to fit with sidebar better

--- a/style-calendar.css
+++ b/style-calendar.css
@@ -15,19 +15,22 @@
   display: grid;
   gap: 10px;
   grid-template-columns: auto 1fr;
-  margin: 2rem;
+  margin: 1em 0 1em 0;
+  margin-left: 0;
 }
 
 .timeline {
   display: grid;
   grid-template-rows: repeat(var(--numHours), calc(var(--timeHeight)*4));
+  min-width: 3em;
 }
 
 .days {
   display: grid;
   grid-column: 2;
   gap: 5px;
-  grid-template-columns: repeat(var(--numDays),calc(70em/var(--numDays)));
+  grid-template-columns: repeat(var(--numDays),calc(100%/var(--numDays)));
+  margin-right: 1.5em;
 }
 
 .events {
