--- a/style-calendar.css
+++ b/style-calendar.css
@@ -1,15 +1,4 @@
 /************************** calendar **************************/
-:root {
-  --numDays: 7;
-  --numHours: 15;
-  --timeHeight: 15px;
-  --calBgColor: #fff1f8;
-  --eventBorderColor: #f2d3d8;
-  --eventColor1: #ffd6d1;
-  --eventColor2: #fafaa3;
-  --eventColor3: #e2f8ff;
-  --eventColor4: #d1ffe6;
-}
 
 .calendar {
   display: grid;
@@ -23,13 +12,14 @@
   display: grid;
   grid-template-rows: repeat(var(--numHours), calc(var(--timeHeight)*4));
   min-width: 3em;
+  color: var(--bgColorPrimary);
 }
 
 .days {
   display: grid;
   grid-column: 2;
   gap: 5px;
-  grid-template-columns: repeat(var(--numDays),calc(100%/var(--numDays)));
+  grid-template-columns: repeat(var(--numDays), calc(100%/var(--numDays)));
   margin-right: 1.5em;
 }
 
@@ -37,7 +27,7 @@
   display: grid;
   grid-template-rows: repeat(calc(var(--numHours)*4), var(--timeHeight));
   border-radius: 5px;
-  background: var(--calBgColor);
+  /* background: var(--bgColorPrimary); */
 }
 
 /*** Place on Timeline ***/
@@ -86,11 +76,12 @@
 }
 
 .event {
-  border: 1px solid var(--eventBorderColor);
+  /* border: 1px solid var(--FgColorTertiary); */
   border-radius: 5px;
   padding: 0.5rem;
   margin: 0 0.5rem;
-  background: white;
+  background: var(--bgColorTertiary);
+  color: var(--fgColorSecondary)
 }
 
 .space,
@@ -98,27 +89,10 @@
   height: 60px
 }
 
-/*** Global / Etc ***/
-
-.corp-fi {
-  background: var(--eventColor1);
-}
-
-.ent-law {
-  background: var(--eventColor2);
-}
-
-.writing {
-  background: var(--eventColor3);
-}
-
-.securities {
-  background: var(--eventColor4);
-}
-
 .date {
   display: flex;
   gap: 0.5em;
+  color: var(--bgColorPrimary);
 }
 
 .date-num {
