--- a/style-calendar.css
+++ b/style-calendar.css
@@ -1,18 +1,17 @@
-/************************** calendar **************************/
-
+/************************** common styles **************************/
 .calendar {
   display: grid;
   gap: 10px;
   grid-template-columns: auto 1fr;
   margin: 1em 0 1em 0;
   margin-left: 0;
+  color: var(--fgColorPrimary)
 }
 
 .timeline {
   display: grid;
   grid-template-rows: repeat(var(--numHours), calc(var(--timeHeight)*4));
   min-width: 3em;
-  color: var(--bgColorPrimary);
 }
 
 .days {
@@ -26,12 +25,54 @@
 .events {
   display: grid;
   grid-template-rows: repeat(calc(var(--numHours)*4), var(--timeHeight));
-  border-radius: 5px;
-  /* background: var(--bgColorPrimary); */
+  border-right: 1px solid var(--bgColorTertiary);
 }
 
-/*** Place on Timeline ***/
+/************************** common style ends **************************/
 
+/**************************  header styles **************************/
+.date {
+  height: 60px
+}
+
+.date {
+  display: flex;
+  gap: 0.5em;
+}
+
+.date-num {
+  font-size: 3rem;
+  font-weight: 600;
+  display: inline;
+}
+
+.date-day {
+  display: inline;
+  font-size: 2rem;
+  font-weight: 100;
+  margin-top: auto
+}
+
+/************************** header style ends **************************/
+
+/************************** event styles **************************/
+.title {
+  font-weight: 600;
+  margin-bottom: 0.25rem;
+}
+
+.event {
+  border: 1px solid var(--fgColorSecondary);
+  border-radius: 5px;
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+  background: var(--bgColorSecondary);
+  color: var(--fgColorTertiary)
+}
+
+/************************** event style ends **************************/
+
+/************************** grid styles **************************/
 .start-10 {
   grid-row-start: 2;
 }
@@ -68,44 +109,4 @@
   grid-row-end: 9;
 }
 
-/*** Event ***/
-
-.title {
-  font-weight: 600;
-  margin-bottom: 0.25rem;
-}
-
-.event {
-  /* border: 1px solid var(--FgColorTertiary); */
-  border-radius: 5px;
-  padding: 0.5rem;
-  margin: 0 0.5rem;
-  background: var(--bgColorTertiary);
-  color: var(--fgColorSecondary)
-}
-
-.space,
-.date {
-  height: 60px
-}
-
-.date {
-  display: flex;
-  gap: 0.5em;
-  color: var(--bgColorPrimary);
-}
-
-.date-num {
-  font-size: 3rem;
-  font-weight: 600;
-  display: inline;
-}
-
-.date-day {
-  display: inline;
-  font-size: 2rem;
-  font-weight: 100;
-  margin-top: auto
-}
-
-/************************** calendar style ends **************************/
+/************************** grid style ends **************************/
