--- a/style.css
+++ b/style.css
@@ -17,12 +17,12 @@ Theme: https://coolors.co/44355b-31263e-221e22-eca72c-ee5622
   --numDays: 7;
   --numHours: 15;
   --timeHeight: 15px;
-  --bgColorPrimary: #221E22;
-  --fgColorPrimary: #ECA72C;
-  --bgColorSecondary: #31263E;
-  --fgColorSecondary: white;
-  --bgColorTertiary: #44355B;
-  --fgColorTtertiary: #EE5622;
+  --bgColorPrimary: #03110D;
+  --fgColorPrimary: #AAC5C2;
+  --bgColorSecondary: #3E505B;
+  --fgColorSecondary: #000000;
+  --bgColorTertiary: #213134;
+  --fgColorTertiary: #FFFFFF;
 }
 
 * {
@@ -33,13 +33,14 @@ Theme: https://coolors.co/44355b-31263e-221e22-eca72c-ee5622
 body {
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(170deg, #ECA72C, #EE5622);
+  background: var(--bgColorPrimary);
   font-family: system-ui, sans-serif;
+  color: var(--fgColorTertiary)
 }
 
 ul {
   list-style-type: none;
-  color: white;
+  color: var(--fgColorSecondary);
 }
 
 /************************** common style ends **************************/
@@ -47,17 +48,18 @@ ul {
 /************************** header styles **************************/
 header {
   position: fixed;
+  display: flex;
   width: 100%;
-  background: #31263E;
-  text-align: right;
-  line-height: 4em;
+  background: var(--bgColorTertiary);
+  align-items: center;
+  justify-content: space-between;
 }
 
-h1 {
-  color: white;
+.logo {
+  color: var(--fgColorSecondary);
   font-size: 3rem;
   float: left;
-  margin-left: 16px;
+  margin: 0;
 }
 
 .new-task-button {
@@ -76,9 +78,9 @@ h1 {
   top: 20%;
   align-items: center;
   padding: 20px;
-  background: #221E22;
+  background: var(--bgColorSecondary);
   border-radius: 5px;
-  border: 1px solid #bbb;
+  border: 1px solid var(--bgColorTertiary);
 }
 
 .task-detail {
@@ -100,8 +102,8 @@ h1 {
 }
 
 .save-button {
-  background-color: #EE5622;
-  color: #fff;
+  color: var(--fgColorPrimary);
+  background-color: var(--bgColorPrimary);
   border: none;
   outline: none;
   border-radius: 5px;
@@ -111,12 +113,13 @@ h1 {
 
 .save-button:hover {
   cursor: pointer;
-  background-color: #ECA72C;
+  background-color: var(--fgColorTertiary);
+  color: var(--fgColorSecondary);
 }
 
 .cancel-button {
   background: none;
-  color: #4a4a4a;
+  color: var(--fgColorPrimary);
   border: none;
   outline: none;
   border-radius: 5px;
@@ -126,7 +129,8 @@ h1 {
 
 .cancel-button:hover {
   cursor: pointer;
-  background-color: #44355B;
+  background-color: var(--fgColorTertiary);
+  color: var(--fgColorSecondary);
 }
 
 /************************** task-detail style ends **************************/
@@ -141,7 +145,7 @@ h1 {
 .sidebar {
   position: fixed;
   padding: 0 5px 0 0;
-  background-color: #221E22;
+  background-color: var(--bgColorSecondary);
   float: left;
   top: 4em;
 }
@@ -152,12 +156,12 @@ h1 {
   overflow-y: scroll;
   width: var(--sidebarWidth);
   overflow-y: scroll;
-  mask-image: linear-gradient(to top, transparent, black),
-    linear-gradient(to left, transparent 17px, black 17px);
+  mask-image: linear-gradient(to top, transparent, var(--bgColorPrimary)),
+    linear-gradient(to left, transparent 17px, var(--bgColorPrimary) 17px);
   mask-size: 100% 20000px;
   mask-position: left bottom;
-  -webkit-mask-image: linear-gradient(to top, transparent, black),
-    linear-gradient(to left, transparent 17px, black 17px);
+  -webkit-mask-image: linear-gradient(to top, transparent, var(--bgColorPrimary)),
+    linear-gradient(to left, transparent 17px, var(--bgColorPrimary) 17px);
   -webkit-mask-size: 100% 20000px;
   -webkit-mask-position: left bottom;
   transition: mask-position 0.3s, -webkit-mask-position 0.3s;
@@ -186,22 +190,12 @@ h1 {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #31263E;
+  background: var(--bgColorPrimary);
 }
-
-/* @keyframes background {
-  from {
-    background: pink;
-  }
-
-  to {
-    background: #c0d6ff;
-  }
-} */
 
 .task-group {
   font-weight: bold;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 1px solid var(--fgColorSecondary);
   margin: 1em 0 0 0;
   padding-left: 0.5em
 }
@@ -213,11 +207,11 @@ h1 {
 }
 
 .task a {
-  color: var(--);
+  color: var(--fgColorTertiary);
 }
 
 .task a:visited {
-  color: coral
+  color: var(--fgColorTertiary)
 }
 
 .checkbox {
