--- a/style-calendar.css
+++ b/style-calendar.css
@@ -1,44 +1,78 @@
-/************************** calendar **************************/
-:root {
-  --numDays: 7;
-  --numHours: 15;
-  --timeHeight: 15px;
-  --calBgColor: #fff1f8;
-  --eventBorderColor: #f2d3d8;
-  --eventColor1: #ffd6d1;
-  --eventColor2: #fafaa3;
-  --eventColor3: #e2f8ff;
-  --eventColor4: #d1ffe6;
-}
-
+/************************** common styles **************************/
 .calendar {
   display: grid;
   gap: 10px;
   grid-template-columns: auto 1fr;
-  margin: 2rem;
+  margin: 1em 0 1em 0;
+  margin-left: 0;
+  color: var(--fgColorPrimary)
 }
 
 .timeline {
   display: grid;
   grid-template-rows: repeat(var(--numHours), calc(var(--timeHeight)*4));
+  min-width: 3em;
 }
 
 .days {
   display: grid;
   grid-column: 2;
   gap: 5px;
-  grid-template-columns: repeat(var(--numDays),calc(70em/var(--numDays)));
+  grid-template-columns: repeat(var(--numDays), calc(100%/var(--numDays)));
+  margin-right: 1.5em;
 }
 
 .events {
   display: grid;
   grid-template-rows: repeat(calc(var(--numHours)*4), var(--timeHeight));
-  border-radius: 5px;
-  background: var(--calBgColor);
+  border-right: 1px solid var(--bgColorTertiary);
 }
 
-/*** Place on Timeline ***/
+/************************** common style ends **************************/
 
+/**************************  header styles **************************/
+.date {
+  height: 60px
+}
+
+.date {
+  display: flex;
+  gap: 0.5em;
+}
+
+.date-num {
+  font-size: 3rem;
+  font-weight: 600;
+  display: inline;
+}
+
+.date-day {
+  display: inline;
+  font-size: 2rem;
+  font-weight: 100;
+  margin-top: auto
+}
+
+/************************** header style ends **************************/
+
+/************************** event styles **************************/
+.title {
+  font-weight: 600;
+  margin-bottom: 0.25rem;
+}
+
+.event {
+  border: 1px solid var(--fgColorSecondary);
+  border-radius: 5px;
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+  background: var(--bgColorSecondary);
+  color: var(--fgColorTertiary)
+}
+
+/************************** event style ends **************************/
+
+/************************** grid styles **************************/
 .start-10 {
   grid-row-start: 2;
 }
@@ -75,60 +109,4 @@
   grid-row-end: 9;
 }
 
-/*** Event ***/
-
-.title {
-  font-weight: 600;
-  margin-bottom: 0.25rem;
-}
-
-.event {
-  border: 1px solid var(--eventBorderColor);
-  border-radius: 5px;
-  padding: 0.5rem;
-  margin: 0 0.5rem;
-  background: white;
-}
-
-.space,
-.date {
-  height: 60px
-}
-
-/*** Global / Etc ***/
-
-.corp-fi {
-  background: var(--eventColor1);
-}
-
-.ent-law {
-  background: var(--eventColor2);
-}
-
-.writing {
-  background: var(--eventColor3);
-}
-
-.securities {
-  background: var(--eventColor4);
-}
-
-.date {
-  display: flex;
-  gap: 0.5em;
-}
-
-.date-num {
-  font-size: 3rem;
-  font-weight: 600;
-  display: inline;
-}
-
-.date-day {
-  display: inline;
-  font-size: 2rem;
-  font-weight: 100;
-  margin-top: auto
-}
-
-/************************** calendar style ends **************************/
+/************************** grid style ends **************************/
